@@ -111,6 +111,7 @@ Summarise Changes
 #259:For Mp3 change adjustPaddingInPlace() so uses FileChannel like FlacTagWriter.insertUsingChunks()
 #211:RandomFile can fail FileNotFoundException just if file being used by another process
 #305:FlacTagWriter should use ShiftData like Mp4 and MP3 so only needs enough memory to store one chunk
+#301:In Mp3 when metadata becomes shorter we dont reclaim the space instead just left as padding
 
 2.2.5
 #033:Added getAudioStartPos() and getAudioEndPos() methods to AudioHeader interface and implemented for most formats
